...
  public static let profileSummary = "sample_profile_summary"
  public static let sessionCard = "sample_session_card"
  public static let sessionCountdown = "sample_session_countdown"
  public static let sessionEndedBanner = "sample_session_ended_banner"
  public static let scenarioDrawerButton = "sample_scenario_drawer_button"
  public static let signOut = "sample_sign_out"
  public static let signOutConfirm = "sample_sign_out_confirm"
  public static let versionLabel = "sample_version_label"
  public static let settingEnhancedSmartSelfie = "sample_setting_enhanced_smart_selfie"
  public static let settingAgentMode = "sample_setting_agent_mode"
  public static let settingAppearance = "sample_setting_appearance"
  public static let appearanceSheet = "sample_appearance_sheet"
  public static let appearanceOptionPrefix = "sample_appearance_option"
...
  public static let profileConfigFieldPrefix = "sample_profile_config_field"

  public static let kycFormScreen = "sample_kyc_form_screen"
  public static let countryTrigger = "sample_country_trigger"
  public static let idTypeTrigger = "sample_idtype_trigger"
  public static let idNumberInput = "sample_idnumber_input"
  public static let kycContinue = "sample_kyc_continue"
  public static let tokenFloat = "sample_token_float"
  public static let countrySheet = "sample_country_sheet"
  public static let countrySearch = "sample_country_search"
  public static let countryEmpty = "sample_country_empty"
  public static let idTypeSheet = "sample_idtype_sheet"
  public static let idTypeSearch = "sample_idtype_search"
...
  public static let captureModeOptionPrefix = "sample_capture_mode_option"
  public static let genericDocumentOrientationPrefix = "sample_generic_document_orientation"
  public static let genericDocumentAspectRatioPrefix = "sample_generic_document_aspect_ratio"

  public static let userDetailsScreen = "sample_user_details_screen"
  public static let userDetailsHint = "sample_user_details_hint"
  public static let userDetailsContinue = "sample_user_details_continue"
  public static let rememberDetailsSwitch = "sample_remember_details_switch"
  public static let userDetailsProfile = "sample_user_details_profile"

  public static let authUserIdScreen = "sample_auth_user_id_screen"
  public static let authUserIdInput = "sample_auth_user_id_input"
  public static let authUserIdOptionPrefix = "sample_auth_user_id_option"
  public static let authUserIdRegister = "sample_auth_user_id_register"
...
